add new bigDecimal List